--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
 				<h2>Resume</h2>
 			</div>
 			<div id="showresume">
-				<div id="close">x</div>
+				<button id="close">Close Resume</button>
 			</div>
 		</div>
 		<div class="col-md-4" id="name">
@@ -104,9 +104,5 @@
 				</div>
 		</div>
 		<div class="col-md-3"></div>
-	</div>
-	<div id="showresume">
-		<div id="close">x</div>
-		<%= image_tag "resume.png" %>
 	</div>
 </div>
