--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -58,10 +58,14 @@ a {
 	overflow: scroll;
 	background-color: white;
 	z-index: 2;
-	background: url("resume.png");
- 	background-size: auto 100%;
- 	background-repeat: no-repeat;
- 	background-position: center;
+	// background: url("resume.png");
+ // 	background-size: auto 100%;
+ // 	background-repeat: no-repeat;
+ // 	background-position: center;
+ img {
+ 	height: 100%;
+ 	width: auto;
+ }
 	#close {
 		width: 100px;
 		margin: 10px auto;
