--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,6 +64,7 @@
 			</div>
 			<div id="showresume">
 				<button id="close">Close Resume</button>
+				<%= image_tag "resume.png" %>
 			</div>
 		</div>
 		<div class="col-md-4" id="name">
