--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,16 +28,6 @@
 			<div id="links" class="container">
 		    <div class="center"><h2>Links</h2></div>
 		    <div class="field">
-		    	<%= link_to "https://www.instagram.com/hans__palacios/", target: :_blank do %>
-			    	<%= image_tag "instagramlogo.png", :class => "linkimage" %>
-		    	<% end %>
-		    </div>
-		    <div class="field">
-		    	<%= link_to "https://www.facebook.com/hanssebastian", target: :_blank do %>
-			    	<%= image_tag "facebooklogo.png", :class => "linkimage" %>
-		    	<% end %>
-		    </div>
-		    <div class="field">
 		    	<%= link_to "https://www.meetup.com/members/228689923/", target: :_blank do %>
 			    	<%= image_tag "meetuplogo.png", :class => "meetupimage" %>
 		    	<% end %>
@@ -63,7 +53,7 @@
 				<h2>Resume</h2>
 			</div>
 			<div id="showresume">
-				<button id="close">Close Resume</button>
+				<button id="close">X</button>
 				<%= image_tag "resume.png" %>
 			</div>
 		</div>
