--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -48,36 +48,32 @@ a {
 }
 #showresume {
 	position: fixed;
-	display: block;
-	top: 5%;
-	left: 10%;
-	margin: 0 auto;
+	top: 0;
+	left: 0;
 	display: none;
-	width: 80%;
-	height: 90%;
+	width: 100%;
+	height: 100%;
 	overflow: scroll;
-	background-color: white;
+	background-color: rgba(0,0,0,.9);
 	z-index: 2;
-	// background: url("resume.png");
- // 	background-size: auto 100%;
- // 	background-repeat: no-repeat;
- // 	background-position: center;
  img {
- 	height: 100%;
+ 	margin-bottom: 20px;
+ 	height: 90%;
  	width: auto;
  }
 	#close {
-		width: 100px;
-		margin: 10px auto;
-		origin: auto;
+		margin-left: 80%;
+		margin-top: 2%;
+		color: white;
+		font-size: 18px;
+		width: 20px;
+		height: 20px;
 		text-align: center;
-		background-color: rgba(200,200,200,.3);
+		background-color: rgba(200,200,200,0);
 		font-family: 'Ubuntu Condensed', sans-serif;
-		position: absolute;
-		z-index: 3;
 		cursor: pointer;
 		border: none;
-		-webkit-transform: translate(-50%, 0); 
+		z-index: 3;
 	}
 }
 #contactbox {
