--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,13 +72,10 @@
 			<div id="interests" class="container">
 		    <div class=" center intcenter"><h2>Interests</h2></div>
 		    <div class="field">
-		    	<pre>        UI & UX</pre>
+		    	<pre>         Kayaking</pre>
 		    </div>
 		    <div class="field">
-		    	<p>Business Development</p>
-		    </div>
-		    <div class="field">
-		    	<p>Kayaking</p>
+		    	<pre>       Sailing</pre>
 		    </div>
 		    <div class="field">
 		    	<p>Rock Climbing</p>
@@ -86,6 +83,12 @@
 		    <div class="field">
 		    	<p>Marketing</p>
 		    </div>
+		    <div class="field">
+		    	<pre>       Business <br>   Development</pre>
+		    </div>
+		    <div class="field">
+		    	<pre>        UI & UX</pre>
+		    </div> 
 			</div>
 		</div>
 		<div class="col-md-3" id="contact">
