--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -90,14 +90,17 @@ a {
 		left: 65px;
 	}
 	.intcenter {
-		top: 60px;
+		top: 72px;
 		left: 55px;
 	}
 	.field { 
 		width: 80px; 
-		height: 80px; 
+		height: 60px; 
 		position: absolute; 
 		display: none;
+		.margintop {
+			margin-top: 25px;
+		}
 	}
 	.active {
 		display: inline-block;
