--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,22 +72,22 @@
 			<div id="interests" class="container">
 		    <div class=" center intcenter"><h2>Interests</h2></div>
 		    <div class="field">
-		    	<pre>         Kayaking</pre>
+		    	<pre class="margintop">         Kayaking</pre>
 		    </div>
 		    <div class="field">
-		    	<pre>       Sailing</pre>
+		    	<pre>         Sailing</pre>
 		    </div>
 		    <div class="field">
 		    	<p>Rock Climbing</p>
 		    </div>
 		    <div class="field">
-		    	<p>Marketing</p>
+		    	<p class="margintop">Marketing</p>
 		    </div>
 		    <div class="field">
-		    	<pre>       Business <br>   Development</pre>
+		    	<pre>     Business <br> Development</pre>
 		    </div>
 		    <div class="field">
-		    	<pre>        UI & UX</pre>
+		    	<pre><br>           UI & UX</pre>
 		    </div> 
 			</div>
 		</div>
