projects hover effect

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,6 @@
 		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-1"></div>
 		<div class="col-md-3">
 			<div id="resume">
 				<h2>Resume</h2>
@@ -61,16 +60,16 @@
 			<h1>Hans-Sebastian Palacios</h1>
 			<h4><strong>Web Developer & Designer</strong></h4>
 		</div>
-		<div class="col-md-3">
+		<div class="col-md-3" id="projects">
 			<h2>Websites &<br> Projects</h2>
+			<%= image_tag "doublearrow.png", :id => "doublearrow" %>
 		</div>
-		<div class="col-md-1"></div>
 	</div>
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-3">
 			<div id="interests" class="container">
-		    <div class=" center intcenter"><h2>Interests</h2></div>
+		    <div class="center intcenter"><h2>Interests</h2></div>
 		    <div class="field">
 		    	<pre class="margintop">         Kayaking</pre>
 		    </div>
