--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -18,6 +18,9 @@ a {
 	margin: 50px auto;
 	text-align: center;
 }
+.col-md-3, .col-md-4 {
+	margin: 0 auto;
+}
 .margintop {
 	margin: 8% auto 0 auto;
 	text-align: center;
@@ -29,7 +32,7 @@ a {
 	width: 50px;
 }
 #contact {
-	margin-top: 55px;
+	margin-top: 72px;
 }
 #name {
 	height: 100px;
@@ -79,6 +82,23 @@ a {
 #contactbox {
 	display: none;
 }
+#projects {
+	margin-top: 15px;
+	height: 50px;
+	width: 500px;
+	h2 {
+		margin: 0 0 0 70px;
+		width: 150px;
+		display: inline-block;
+		float: left;
+		cursor: pointer;
+	}
+}
+#doublearrow {
+	width: 50px;
+	display: none;
+	float: right;
+	}
 #links, #skills, #interests {
 	width: 200px;
 	height: 200px;
