--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,8 @@
 		<div class="col-md-3"></div>
 	</div>
 	<div class="row">
-		<div class="col-md-3">
+		<div class="col-md-1"></div>
+		<div class="col-md-2">
 			<div id="resume">
 				<h2>Resume</h2>
 			</div>
@@ -60,8 +61,10 @@
 			<h1>Hans-Sebastian Palacios</h1>
 			<h4><strong>Web Developer & Designer</strong></h4>
 		</div>
-		<div class="col-md-3" id="projects">
+		<div class="col-md-2" id="projects">
 			<h2>Websites &<br> Projects</h2>
+		</div>
+		<div class="col-md-1">
 			<%= image_tag "doublearrow.png", :id => "doublearrow" %>
 		</div>
 	</div>
