--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,6 +4,9 @@
 h1, h2, h4 {
 	font-family: 'Ropa Sans', sans-serif;
 }
+h1, h2, a{
+	color: #034173;
+}
 h4 {
 	font-weight: 900;
 }
@@ -74,7 +77,7 @@ a {
 		color: white;
 		font-size: 18px;
 		width: 20px;
-		height: 20px;
+		height: 40px;
 		text-align: center;
 		background-color: rgba(200,200,200,0);
 		font-family: 'Ubuntu Condensed', sans-serif;
@@ -83,19 +86,56 @@ a {
 		z-index: 3;
 	}
 }
+
 #contactbox {
 	display: none;
 }
 #projects h2{
 	cursor: pointer;
 	float: right;
-
 }
 #doublearrow {
-	width: 50px;
+	height: 100px;
 	display: none;
-	margin-top: 20px;
+	margin-right: 20px;
+	position: absolute;
+	right: 2%;
 	}
+#arrowtofirstpage {
+	height: 100px;
+	// width:0px;
+	position: fixed;
+	left: 0;
+	top: 40%;
+	transform: scaleX(-1);
+}	
+.bottomborder {
+	border-bottom: 1px solid black;
+}
+.projectlist {
+	text-align: center;
+	padding: 20px;
+	.row {
+		width: 100%;
+		text-align: center;
+		margin: 0;
+	}
+	h2 {
+		margin: 0 auto;
+		color: black;
+	}
+	p.row {
+		margin: 20px;
+	}
+	li, p {
+		text-align: left;
+		font-size: 13px;
+	}
+	.githublink {
+		width: 25px;
+		margin-left: 20px;
+	}
+}
 #links, #skills, #interests {
 	width: 200px;
 	height: 200px;
