--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -104,6 +104,8 @@
 		<div class="col-md-3"></div>
 	</div>
 </div>
+
+<!-- website and projects page -->
 <div class="container-fluid" data-role="page" id="pagetwo">
   <div data-role="header">
     <h1>Websites & Projects</h1>
@@ -117,7 +119,7 @@
     <div class="col-md-9">
     	<div class="row projectlist bottomborder">
     		<div class="row">
-    			<h2>DateNight<%= link_to "GitHub/HansPalacios/DateNight" do %>
+    			<h2>DateNight<%= link_to "https://github.com/HansPalacios/datenight", :target => "_blank" do %>
 	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 	    		<% end %></h2>
     		</div>
@@ -137,7 +139,7 @@
     	</div>
     	<div class="row projectlist bottomborder">
     		<div class="row">
-    			<h2>Groundwork Detailing<%= link_to "GitHub/HansPalacios/DateNight" do %>
+    			<h2>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %>
 	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 	    		<% end %></h2>
     		</div>
@@ -157,7 +159,7 @@
     	</div>
     	<div class="row projectlist">
     		<div class="row">
-    			<h2>Where Next<%= link_to "GitHub/HansPalacios/DateNight" do %>
+    			<h2>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %>
 	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 	    		<% end %></h2>
     		</div>
