--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -57,9 +57,14 @@
 				<%= image_tag "resume.png" %>
 			</div>
 		</div>
-		<div class="col-md-4" id="name">
-			<h1>Hans-Sebastian Palacios</h1>
-			<h4><strong>Web Developer & Designer</strong></h4>
+		<div class="col-md-4" id="togglename">
+			<div id="name" class="active">
+				<h1>Hans-Sebastian Palacios</h1>
+				<h4><strong>Web Developer & Designer</strong></h4>
+			</div>
+			<div id="bio">
+				<p>A business-minded millennial with a solid foundation in HTML, CSS, JavaScript, and Ruby, and previous experience in sales and management.As well as an avid reader of motivational and self-development literature.</p>
+			</div>
 		</div>
 		<div class="col-md-2" id="projects">
 			<a href="#pagetwo" data-transition="slide">
