--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,7 +72,9 @@
 			</a>
 		</div>
 		<div class="col-md-1" id="arrowcolumn">
+			<a href="#pagetwo" data-transition="slide">
 				<%= image_tag "doublearrow.png", :id => "doublearrow"%>
+			</a>
 		</div>
 	</div>
 	<div class="row">
