font of h1 and h2

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 h1, h2, h4 {
-	font-family: 'Ropa Sans', sans-serif;
+	font-family: 'Ubuntu Condensed', sans-serif;
 }
 h1, h2, a{
 	color: #00145a;
