--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,9 +63,10 @@
 				<h4><strong>Web Developer & Designer</strong></h4>
 			</div>
 			<div id="bio">
-				<p>A business-minded millennial with a solid foundation in HTML, CSS, JavaScript, and Ruby, and previous experience in sales and management.As well as an avid reader of motivational and self-development literature.</p>
+				<p>A business-minded millennial with a solid foundation in HTML, CSS, JavaScript, and Ruby. Previous experience in sales and management. As well as an avid reader of motivational and self-development literature.</p>
 			</div>
 		</div>
+
 		<div class="col-md-2" id="projects">
 			<a href="#pagetwo" data-transition="slide">
 				<h2>Websites &<br> Projects</h2>
