--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -189,4 +189,8 @@ a {
 	background-repeat: no-repeat;
 }
 
-
+@media only screen and (max-width: 768px) {
+  .margintop {
+		margin: 20% auto 0 auto;
+	}
+}
