margin mobile test 1

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -191,6 +191,6 @@ a {
 
 @media only screen and (max-width: 768px) {
   .margintop {
-		margin: 20% auto 0 auto;
+		margin: 300px auto 0 auto;
 	}
 }
