--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid" data-role="page" id="pageone">
+	<div class="row mobilepadding"></div>
 	<div class="row margintop">
 		<div class="col-md-3"></div>
 		<div class="col-md-3">
