mobile top margin test 3

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -190,7 +190,7 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
-  .margintop {
-		margin-top: auto;
+  .mobilepadding {
+		height: 20%;
 	}
 }
