--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -189,9 +189,6 @@ a {
 	background-repeat: no-repeat;
 }
 
-@media only screen and (max-width: 768px) {
-  .mobilepadding {
-		width: 100%;
-		height: 200px;
-	}
-}
+// @media only screen and (max-width: 768px) {
+  
+// }
