--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -41,7 +41,10 @@ a {
 	height: 100px;
 		margin: 10px;
 	#bio {
-		// padding-top: 20px;
+		background-image: url("backgroundcolor6.png");
+		background-size:  90% 90%;
+		background-position: center;
+		background-repeat: no-repeat;
 		display: none;
 		line-height: 25px;
 	}
@@ -190,5 +193,5 @@ a {
 }
 
 // @media only screen and (max-width: 768px) {
-  
+
 // }
