--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -49,7 +49,6 @@ a {
 		line-height: 25px;
 	}
 }
-
 #resume {
 	width: 150px;
 	height: 30px;
@@ -110,41 +109,7 @@ a {
 	position: absolute;
 	right: 2%;
 	}
-#arrowtofirstpage {
-	height: 100px;
-	// width:0px;
-	position: fixed;
-	left: 0;
-	top: 40%;
-	transform: scaleX(-1);
-}	
-.bottomborder {
-	border-bottom: 1px solid black;
-}
-.projectlist {
-	text-align: center;
-	padding: 20px;
-	.row {
-		width: 100%;
-		text-align: center;
-		margin: 0;
-	}
-	h2 {
-		margin: 0 auto;
-		color: black;
-	}
-	p.row {
-		margin: 20px;
-	}
-	li, p {
-		text-align: left;
-		font-size: 13px;
-	}
-	.githublink {
-		width: 25px;
-		margin-left: 20px;
-	}
-}
+
 #links, #skills, #interests {
 	width: 200px;
 	height: 200px;
@@ -192,6 +157,89 @@ a {
 	background-repeat: no-repeat;
 }
 
+
+// **********Second page**********
+.imagerow {
+	height: 110px;
+	padding: 10px;
+}
+#datenightimage {
+	background-image: url("datenight.png");
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	height: 100px;
+	width: auto;
+	padding: 0;
+	padding-top: 15px;
+	h4 {
+		display: none;
+		font-shadow: 1px 1px white;
+	}
+	&:hover {
+		cursor: pointer;
+		height: 105px;
+		h4 {
+			display: inline-block;
+		}
+	}
+}
+.video {
+	position: fixed;
+	max-width: 80%;
+	top: 10%;
+	left: 10%;
+	z-index: 1;
+	border: 1px solid rgba(0,0,0,.8);
+	border-right: 2px solid rgba(0,0,0,.8);
+}
+#datenightvideo {
+	display: none;
+}
+.close {
+	display: none;
+	position: fixed;
+	right: 11%;
+	top: 11%;
+	font-family: 'Ubuntu Condensed', sans-serif;
+	cursor: pointer;
+	z-index: 2;
+}
+#arrowtofirstpage {
+	height: 100px;
+	position: fixed;
+	left: 0;
+	top: 40%;
+	transform: scaleX(-1);
+}	
+.bottomborder {
+	border-bottom: 1px solid black;
+}
+.projectlist {
+	text-align: center;
+	padding: 20px;
+	.row {
+		width: 100%;
+		text-align: center;
+		margin: 0;
+	}
+	h2 {
+		margin: 0 auto;
+		color: black;
+	}
+	p.row {
+		margin: 20px;
+	}
+	li, p {
+		text-align: left;
+		font-size: 13px;
+		margin: 2px;
+	}
+	.githublink {
+		width: 25px;
+		margin-left: 20px;
+	}
+}
 // @media only screen and (max-width: 768px) {
 
 // }
