--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -111,7 +111,13 @@
 	</div>
 </div>
 
-<!-- website and projects page -->
+
+
+
+
+
+<!-- ***** website and projects page ***** -->
+
 <div class="container-fluid" data-role="page" id="pagetwo">
   <div data-role="header">
     <h1>Websites & Projects</h1>
@@ -125,64 +131,78 @@
     <div class="col-md-9">
     	<div class="row projectlist bottomborder">
     		<div class="row">
-    			<h2>DateNight<%= link_to "https://github.com/HansPalacios/datenight", :target => "_blank" do %>
-	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
-	    		<% end %></h2>
-    		</div>
-    		<div class="row">
-    			<div class="col-md-5">
-    			</div>
-    			<div class="col-md-7">
-    				<p class="row">An app which gives users access to a database of great venues for different types of dates</p>
-    				<ul class="row">
+    			<div class="col-md-6">
+    				<div class="row">
+	    				<h2>DateNight<%= link_to "https://github.com/HansPalacios/datenight", :target => "_blank" do %>
+		    			<%= image_tag "githublogo.png", :class=> "githublink"%>
+		    			<% end %></h2>
+		    		</div>
+		    		<p class="row">An app which gives users access to a database of great venues for different types of dates</p>
+		    	</div>
+		    	<ul class="col-md-6">
 		    			<li>Built using Ruby on Rails, JavaScript, and SCSS with a 2 week deadline</li>
 		    			<li>Using Google API for maps and easy to access information on venues.</li>
 		    			<li>Integrated the Yelp API for venue ratings and other information.</li>
 		    			<li>Optional memberships for discounts and extra services</li>
 		    		</ul>
-    			</div>
+    		</div>
+    		<div class="row imagerow">
+    			<div class="col-md-6"></div>
+    			<div class="col-md-6">
+    				<div id="datenightimage"><h4>Play<br>Video</h4></div>
+    			</div>	
     		</div>
     	</div>
     	<div class="row projectlist bottomborder">
     		<div class="row">
-    			<h2>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %>
-	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
-	    		<% end %></h2>
-    		</div>
-    		<div class="row">
-    			<div class="col-md-5">
-    			</div>
-    			<div class="col-md-7">
-    				<p class="row">A custom designed website for an auto detailing company in Connecticut</p>
-    				<ul class="row">
+    			<div class="col-md-6">
+    				<div class="row">
+	    				<h2>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %>
+			    			<%= image_tag "githublogo.png", :class=> "githublink"%>
+			    		<% end %></h2>
+		    		</div>
+		    		<p class="row">A custom designed website for an auto detailing company in Connecticut</p>
+		    	</div>
+		    	<ul class="col-md-6">
 		    			<li>Modern design with an easy user interface in mind</li>
 		    			<li>Built out using Ruby on Rails, Javascript, bootstrap and SCSS</li>
 		    			<li>Worked with client directly and worked through or compromised with multiple design changes</li>
 		    			<li>Used SendGrid for email interface</li>
 		    		</ul>
-    			</div>
+    		</div>
+    		<div class="row imagerow">
+    			<div class="col-md-6"></div>
+    			<div class="col-md-6">
+    				<div id="groundworkimage"><h4>Play<br>Video</h4></div>
+    			</div>	
     		</div>
     	</div>
     	<div class="row projectlist">
     		<div class="row">
-    			<h2>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %>
-	    			<%= image_tag "githublogo.png", :class=> "githublink"%>
-	    		<% end %></h2>
-    		</div>
-    		<div class="row">
-    			<div class="col-md-5">
-    			</div>
-    			<div class="col-md-7">
-    				<p class="row">An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
-    				<ul class="row">
+    			<div class="col-md-6">
+    				<div class="row">
+	    				<h2>Where Next<%= link_to "https://github.com/HansPalacios/WhereNext", :target => "_blank" do %>
+			    			<%= image_tag "githublogo.png", :class=> "githublink"%>
+			    		<% end %></h2>
+		    		</div>
+		    		<p class="row">An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
+		    	</div>
+		    	<ul class="col-md-6">
 		    			<li>Group Project, where I built out most of the backend and design, while partner designed the SVG map and functionality</li>
 		    			<li>Designed for an extremely simple user experience, with easy navigation, and minimal pages</li>
 		    			<li>Built using Ruby on Rails, Javascript, SCSS, and Bootstrap </li>
 		    		</ul>
-    			</div>
+    		</div>
+    		<div class="row imagerow">
+    			<div class="col-md-6"></div>
+    			<div class="col-md-6">
+    				<div id="wherenextimage"><h4>Play<br>Video</h4></div>
+    			</div>	
     		</div>
     	</div>
     </div>
     <div class="col-md-1"></div>
   </div>
 </div>
+<div class="close" id="close2"><strong>X</strong></div>
+ <%= video_tag(["Hans_Palacios_08_17_2017_DateNight.mov"], :controls => true, :class => "video", :id => "datenightvideo") %>
