--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,11 +1,14 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-h1, h2, h4 {
-	font-family: 'Ubuntu Condensed', sans-serif;
+h1, h2, h3, h4 {
+	font-family: 'Playfair Display SC', serif;
 }
-h1, h2, a{
-	color: #00145a;
+h1, h2, a, h3 {
+	color: black;
+}
+h1 {
+
 }
 h4 {
 	font-weight: 900;
@@ -41,7 +44,6 @@ a {
 	height: 100px;
 		margin: 10px;
 	#bio {
-		background-image: url("backgroundcolor6.png");
 		background-size:  90% 90%;
 		background-position: center;
 		background-repeat: no-repeat;
@@ -165,6 +167,14 @@ a {
 }
 #datenightimage {
 	background-image: url("datenight.png");
+}
+#groundworkimage {
+	background-image: url("groundwork.png");
+}
+#wherenextimage {
+	background-image: url("wherenext.png");
+}
+.siteimages {
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -193,7 +203,7 @@ a {
 	border: 1px solid rgba(0,0,0,.8);
 	border-right: 2px solid rgba(0,0,0,.8);
 }
-#datenightvideo {
+#datenightvideo, #groundworkvideo, #wherenextvideo {
 	display: none;
 }
 .close {
@@ -218,22 +228,28 @@ a {
 .projectlist {
 	text-align: center;
 	padding: 20px;
+	padding-bottom: 80px;
 	.row {
 		width: 100%;
 		text-align: center;
 		margin: 0;
 	}
-	h2 {
+	h3 {
 		margin: 0 auto;
 		color: black;
+		
 	}
 	p.row {
 		margin: 20px;
 	}
 	li, p {
 		text-align: left;
-		font-size: 13px;
+		font-size: 15px;
 		margin: 2px;
+		padding: 0 10px;
+	}
+	ul {
+		margin-top: 120px;
 	}
 	.githublink {
 		width: 25px;
