--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -137,7 +137,9 @@
 		    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 		    			<% end %></h3>
 		    		</div>
-		    		<p class="row">An app which gives users access to a database of great venues for different types of dates</p>
+		    		<div class="row">
+			    		<p>An app which gives users access to a database of great venues for different types of dates</p>
+			    	</div>
 				    <div class="row imagerow">
 		    			<div class="col-md-12">
 		    				<div id="datenightimage" class="siteimages"><h4>Play<br>Video</h4></div>
@@ -161,7 +163,9 @@
 			    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 			    		<% end %></h3>
 		    		</div>
-		    		<p class="row">A custom designed website for an auto detailing company in Connecticut</p>
+		    		<div class="row">
+			    		<p>A custom designed website for an auto detailing company in Connecticut</p>
+			    	</div>
 		    		<div class="row imagerow">
     			<div class="col-md-12">
     				<div id="groundworkimage" class="siteimages"><h4>Play<br>Video</h4></div>
@@ -184,7 +188,9 @@
 			    			<%= image_tag "githublogo.png", :class=> "githublink"%>
 			    		<% end %></h3>
 		    		</div>
-		    		<p class="row">An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
+		    		<div class="row">
+			    		<p>An easy to use and mobile friendly app for popular clubs and bars in Williamsburg, NY</p>
+			    	</div>
 				    <div class="row imagerow">
 		    			<div class="col-md-12">
 		    				<div id="wherenextimage", class="siteimages"><h4>Play<br>Video</h4></div>
