--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -156,7 +156,7 @@
     		
     	</div>
     	<div class="row projectlist bottomborder">
-    		<div class="row">
+    		<div class="row button">
     			<div class="col-md-6">
     				<div class="row">
 	    				<h3>Groundwork Detailing<%= link_to "https://github.com/HansPalacios/Groundwork", :target => "_blank" do %>
@@ -167,18 +167,23 @@
 			    		<p>A custom designed website for an auto detailing company in Connecticut</p>
 			    	</div>
 		    		<div class="row imagerow">
-    			<div class="col-md-12">
-    				<div id="groundworkimage" class="siteimages"><h4>Play<br>Video</h4></div>
-    			</div>	
-    		</div>
+		    			<div class="col-md-12">
+		    				<div id="groundworkimage" class="siteimages"><h4>Play<br>Video</h4></div>
+		    			</div>	
+		    		</div>
+				   </div>
+				   <div class="col-md-6">
+				   	<%= link_to "https://www.groundworkdetailing.com", :target => "_blank" do %>
+				   		<button>Go to site</button>
+				   	<% end %>
+				   	<ul>
+				   		<li>Modern design with an easy user interface in mind</li>
+			    		<li>Built out using Ruby on Rails, Javascript, bootstrap and SCSS</li>
+			    		<li>Worked with client directly and worked through or compromised with multiple design changes</li>
+			    		<li>Used SendGrid for email interface</li>
+			    	</ul>
 		    	</div>
-		    	<ul class="col-md-6">
-		    			<li>Modern design with an easy user interface in mind</li>
-		    			<li>Built out using Ruby on Rails, Javascript, bootstrap and SCSS</li>
-		    			<li>Worked with client directly and worked through or compromised with multiple design changes</li>
-		    			<li>Used SendGrid for email interface</li>
-		    		</ul>
-    		</div>
+		    </div>
     	</div>
     	<div class="row projectlist">
     		<div class="row">
