video size and h3 home page edit

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 		    	<p>HTML5</p>
 		    </div>
 		    <div class="field">
-		    	<p>SCSS</p>
+		    	<pre>  SCSS</pre>
 		    </div>
 		    <div class="field">
 		    	<p>Javascript</p>
@@ -63,7 +63,7 @@
 				<h4><strong>Web Developer & Designer</strong></h4>
 			</div>
 			<div id="bio">
-				<p>A business-minded millennial with a solid foundation in HTML, CSS, JavaScript, and Ruby, along with experience in sales and management. As well as an avid reader of motivational and self-development literature.</p>
+				<p>A business-minded millennial with a solid foundation in HTML, CSS, JavaScript, and Ruby, with experience in sales and management. As well as an avid reader of motivational and self-development literature.</p>
 			</div>
 		</div>
 
