--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,14 +1,9 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-h1, h2, h3, h4 {
+h1, h2, h3, h4, a {
 	font-family: 'Playfair Display SC', serif;
-}
-h1, h2, a, h3 {
 	color: black;
-}
-h1 {
-
 }
 h4 {
 	font-weight: 900;
