--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -6,12 +6,13 @@ h1 {
 		font-family: 'Playfair Display SC', serif;
 
 }
-h2, h3, h4, a {
+h2, h3, h4, a, button {
 	font-family: 'Droid Sans', sans-serif;
 	color: black;
 }
 h4 {
 	font-weight: 900;
+	display: inline-block;
 }
 p, pre, .projectlist li, a {
 	font-family: 'Droid Sans', sans-serif;
